First pass at just 302 AND 304
